# GitDiscord

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt
.forge/: workflow.json
.github/: WEBHOOK_FIX_REPORT.md  copilot-instructions.md
.github/copilot/: setup-steps.yml
.github/skills/adaptive-build-environments/: SKILL.md
.github/skills/forge-release-process/: SKILL.md
scripts/: migrate_notification_links.py
src/: config.py  main.py
src/bot/: __init__.py  client.py
src/bot/commands/: __init__.py  issue_commands.py  link_commands.py
src/db/: __init__.py  models.py  repository.py
src/formatters/: __init__.py  discord_embeds.py
src/github/: __init__.py  client.py
src/nlp/: __init__.py  command_parser.py
src/webhooks/: __init__.py  server.py
src/webhooks/handlers/: __init__.py  pr_handler.py  push_handler.py
tests/: test_config.py  test_main.py
tests/db/: test_repository.py
tests/formatters/: test_discord_embeds.py
tests/github/: test_client.py
tests/nlp/: __init__.py  test_command_parser.py
tests/scripts/: __init__.py  test_migrate_notification_links.py
tests/webhooks/: test_server.py
tests/webhooks/handlers/: test_pr_handler.py  test_push_handler.py
